# TaiChi

./: .cursorignore  .dockerignore  .gitignore  TaiChi.sln
.tools/: build_and_launch_project.py  build_and_launch_project_lib.py  start-nodegraph-demo.cmd  start-nodegraph-demo.ps1  构建启动项目.bat
Examples/NodeGraph.DemoClient.Rust/: Cargo.toml  README.md
Examples/NodeGraph.DemoClient.Rust/src/: main.rs
SDK/: README.md
SDK/CentralService/python/client/: README.md  pyproject.toml
SDK/CentralService/python/client/erp_centralservice_client/: __init__.py  client.py  transport.py
SDK/CentralService/python/service/: README.md  pyproject.toml
SDK/CentralService/python/service/erp_centralservice_service/: __init__.py  client.py  transport.py
SDK/NodeGraph/rust/: Cargo.toml  README.md
SDK/NodeGraph/rust/src/: lib.rs
SDK/NodeGraph/rust/tests/: runtime_tests.rs
Service/: README.md
TaiChi.Cache/: CacheLogEntry.cs  CacheLogLevel.cs  CacheQuery.cs  CacheTable.cs  EntityCache.cs  EntityCacheOptions.cs  TaiChi.Cache.csproj  TaiChiCache.cs  TaiChiCacheOptions.cs
TaiChi.Core.Example/: Program.cs  TaiChi.Core.Example.csproj
TaiChi.Core.Mvvm/: TaiChi.Core.Mvvm.csproj
TaiChi.I18n/: ILocalizationService.cs  JsonResourceLoader.cs  LocalizationConfig.cs  LocalizationService.cs  README.md  ResourceGenerator.cs  ResourceManager.cs  ResourceValidator.cs  TaiChi.I18n.csproj
TaiChi.I18n.Web/: ResourceMiddleware.cs  TaiChi.I18n.Web.csproj  WebExtensions.cs
TaiChi.I18n.Wpf/: ImageResourceConverter.cs  LocalizedBinding.cs  TaiChi.I18n.Wpf.csproj  WpfExtensions.cs
TaiChi.I18n.WpfExample/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TaiChi.I18n.WpfExample.csproj
TaiChi.IO.Ports/: TaiChi.IO.Ports.csproj
TaiChi.License/: LicenseManager.cs  README.md  TaiChi.License.csproj
TaiChi.Loggin/: HostBuilderExtensions.cs  LoggingBuilderExtensions.cs  README.md  ServiceCollectionExtensions.cs  (+2 more)
(+782 files in other folders)
