[package]
name = "nodegraph-demo-client-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
nodegraph-sdk = { path = "../../SDK/NodeGraph/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
